Update CV for September 2024

--- a/cv.bib
+++ b/cv.bib
@@ -90,7 +90,7 @@
 }
 
 @ARTICLE{2017ApJ...843..141F,
-       author = {{Ferguson}, Deborah and {Gardner}, Susan and {Yanny}, Brian},
+       author = {{\mkbibbold{Ferguson}}, \mkbibbold{Deborah} and {Gardner}, Susan and {Yanny}, Brian},
         title = "{Milky Way Tomography with K and M Dwarf Stars: The Vertical Structure of the Galactic Disk}",
       journal = "Astrophys. J.",
      keywords = {galaxies: evolution, galaxies: structure, Astrophysics - Astrophysics of Galaxies},
@@ -110,7 +110,7 @@ archivePrefix = {arXiv},
 }
 
 @article{Heal:2017abq,
-    author = " Healy, James and Lange, Jacob and O'Shaughnessy, Richard and Lousto, Carlos and Campanelli, Manuela and Williamson, Andrew and Zlochower, Yosef and Calderon Bustillo, Juan and Clark, James, and Evans, Christopher and Ferguson, Deborah and Ghonge, Sudarshan and Jani, Karan and Khamesra, Bhavesh and Laguna, Pablo and Shoemaker, Deirdre and Garcia, Alyssa and Boyle, Michael and Hemberger, Daniel and Kidder, Lawrence and Kumar, Prayush and Lovelace, Geoffrey and Pfeiffer, Harald and Scheel, Mark and Teukolsky, Saul",
+    author = " Healy, James and Lange, Jacob and O'Shaughnessy, Richard and Lousto, Carlos and Campanelli, Manuela and Williamson, Andrew and Zlochower, Yosef and Calderon Bustillo, Juan and Clark, James, and Evans, Christopher and \mkbibbold{Ferguson}, \mkbibbold{Deborah} and Ghonge, Sudarshan and Jani, Karan and Khamesra, Bhavesh and Laguna, Pablo and Shoemaker, Deirdre and Garcia, Alyssa and Boyle, Michael and Hemberger, Daniel and Kidder, Lawrence and Kumar, Prayush and Lovelace, Geoffrey and Pfeiffer, Harald and Scheel, Mark and Teukolsky, Saul",
     title = "{Targeted numerical simulations of binary black holes for GW170104}",
     eprint = "1712.05836",
     archivePrefix = "arXiv",
@@ -125,7 +125,7 @@ archivePrefix = {arXiv},
 }
 
 @article{Ferguson:2019slp,
-    author = {{Ferguson}, Deborah and {Ghonge}, Sudarshan and {Clark}, James A. and {Calderon Bustillo}, Juan and {Laguna}, Pablo and {Shoemaker}, Deirdre},
+    author = {{\mkbibbold{Ferguson}}, \mkbibbold{Deborah} and {Ghonge}, Sudarshan and {Clark}, James A. and {Calderon Bustillo}, Juan and {Laguna}, Pablo and {Shoemaker}, Deirdre},
     title = "{Measuring Spin of the Remnant Black Hole from Maximum Amplitude}",
     eprint = "1905.03756",
     archivePrefix = "arXiv",
@@ -140,7 +140,7 @@ archivePrefix = {arXiv},
 }
 
 @article{Evans:2020lbq,
-    author = "Evans, Christopher and Ferguson, Deborah and Khamesra, Bhavesh and Laguna, Pablo and Shoemaker, Deirdre",
+    author = "Evans, Christopher and \mkbibbold{Ferguson}, \mkbibbold{Deborah} and Khamesra, Bhavesh and Laguna, Pablo and Shoemaker, Deirdre",
     title = "{Inside the Final Black Hole: Puncture and Trapped Surface Dynamics}",
     eprint = "2004.11979",
     archivePrefix = "arXiv",
@@ -155,7 +155,7 @@ archivePrefix = {arXiv},
 }
 
 @article{Ferguson:2020xnm,
-    author = "Ferguson, Deborah and Jani, Karan and Laguna, Pablo and Shoemaker, Deirdre",
+    author = "\mkbibbold{Ferguson}, \mkbibbold{Deborah} and Jani, Karan and Laguna, Pablo and Shoemaker, Deirdre",
     title = "{Assessing the readiness of numerical relativity for LISA and 3G detectors}",
     eprint = "2006.04272",
     archivePrefix = "arXiv",
@@ -169,15 +169,19 @@ archivePrefix = {arXiv},
     options = {maxnames=999}
 }
 
-@article{Abbott:2021iab,
+@article{LIGOScientific:2021izm,
     author = {{LIGO Scientific and Virgo Collaborations}},
     collaboration = "LIGO Scientific, VIRGO",
-    title = "{Search for lensing signatures in the gravitational-wave observations from the first half of LIGO-Virgo's third observing run}",
+    title = "{Search for Lensing Signatures in the Gravitational-Wave Observations from the First Half of LIGO\textendash{}Virgo\textquoteright{}s Third Observing Run}",
     eprint = "2105.06384",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2000400",
-    month = "5",
+    doi = "10.3847/1538-4357/ac23db",
+    journal = "Astrophys. J.",
+    volume = "923",
+    number = "1",
+    pages = "14",
     year = "2021"
 }
 
@@ -245,16 +249,20 @@ archivePrefix = {arXiv},
     year = "2021"
 }
 
-@article{Abbott:2020ilb,
+@article{LIGOScientific:2020lkw,
     author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     collaboration = "LIGO Scientific, Virgo, KAGRA",
-    title = "{Diving below the spin-down limit: Constraints on gravitational waves from the energetic young pulsar PSR J0537-6910}",
+    title = "{Diving below the Spin-down Limit: Constraints on Gravitational Waves from the
+Energetic Young Pulsar PSR J0537-6910}",
     eprint = "2012.12926",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "LIGO-P2000407",
-    month = "12",
-    year = "2020"
+    doi = "10.3847/2041-8213/abffcd",
+    journal = "Astrophys. J.",
+    volume = "913",
+    pages = "L27",
+    year = "2021"
 }
 
 @article{Abbott:2020mev,
@@ -289,7 +297,7 @@ archivePrefix = {arXiv},
     year = "2021"
 }
 
-@article{Abbott:2020gyp,
+@article{LIGOScientific:2020kqk,
     author = {{LIGO Scientific and Virgo Collaborations}},
     collaboration = "LIGO Scientific, Virgo",
     title = "{Population Properties of Compact Objects from the Second LIGO-Virgo Gravitational-Wave Transient Catalog}",
@@ -297,8 +305,12 @@ archivePrefix = {arXiv},
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "LIGO-P2000077",
-    month = "10",
-    year = "2020"
+    doi = "10.3847/2041-8213/abe949",
+    journal = "Astrophys. J. Lett.",
+    volume = "913",
+    number = "1",
+    pages = "L7",
+    year = "2021"
 }
 
 @article{LIGOScientific:2020tif,
@@ -348,7 +360,7 @@ archivePrefix = {arXiv},
 }
 
 @article{LIGOScientific:2021ffg,
-    author = "Abbott, R. and others",
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     collaboration = "LIGO Scientific, KAGRA, Virgo",
     title = "{Constraints on dark photon dark matter using data from LIGO\textquoteright{}s and Virgo\textquoteright{}s third observing run}",
     eprint = "2105.13085",
@@ -430,17 +442,21 @@ archivePrefix = {arXiv},
 @article{LIGOScientific:2021usb,
     author = {{LIGO Scientific and Virgo Collaborations}},
     collaboration = "LIGO Scientific, VIRGO",
-    title = "{GWTC-2.1: Deep Extended Catalog of Compact Binary Coalescences Observed by LIGO and Virgo During the First Half of the Third Observing Run}",
+    title = "{GWTC-2.1: Deep extended catalog of compact binary coalescences observed by LIGO and Virgo during the first half of the third observing run}",
     eprint = "2108.01045",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2100063",
-    month = "8",
-    year = "2021"
+    doi = "10.1103/PhysRevD.109.022001",
+    journal = "Phys. Rev. D",
+    volume = "109",
+    number = "2",
+    pages = "022001",
+    year = "2024"
 }
 
 @article{LIGOScientific:2021ozr,
-    author = "Abbott, R. and others",
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     collaboration = "LIGO Scientific, VIRGO, KAGRA",
     title = "{Search for continuous gravitational waves from 20 accreting millisecond
 x-ray pulsars in O3 LIGO data}",
@@ -456,103 +472,135 @@ x-ray pulsars in O3 LIGO data}",
 }
 
 @article{LIGOScientific:2021job,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{Search for subsolar-mass binaries in the first half of Advanced LIGO and Virgo's third observing run}",
+    title = "{Search for Subsolar-Mass Binaries in the First Half of Advanced LIGO\textquoteright{}s and Advanced Virgo\textquoteright{}s Third Observing Run}",
     eprint = "2109.12197",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.CO",
     reportNumber = "LIGO-P2100163-v8",
-    month = "9",
-    year = "2021"
+    doi = "10.1103/PhysRevLett.129.061104",
+    journal = "Phys. Rev. Lett.",
+    volume = "129",
+    number = "6",
+    pages = "061104",
+    year = "2022"
 }
 
-@article{LIGOScientific:2021oez,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{All-sky, all-frequency directional search for persistent gravitational-waves from Advanced LIGO's and Advanced Virgo's first three observing runs}",
+@article{KAGRA:2021rmt,
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, Virgo, LIGO Scientific",
+    title = "{All-sky, all-frequency directional search for persistent gravitational waves from Advanced LIGO\textquoteright{}s and Advanced Virgo\textquoteright{}s first three observing runs}",
     eprint = "2110.09834",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2100292",
-    month = "10",
-    year = "2021"
+    doi = "10.1103/PhysRevD.105.122001",
+    journal = "Phys. Rev. D",
+    volume = "105",
+    number = "12",
+    pages = "122001",
+    year = "2022"
 }
 
 @article{LIGOScientific:2021aug,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{Constraints on the cosmic expansion history from GWTC-3}",
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, Virgo, KAGRA",
+    title = "{Constraints on the Cosmic Expansion History from GWTC\textendash{}3}",
     eprint = "2111.03604",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.CO",
     reportNumber = "LIGO-P2100185-v6, LIGO-P2100185-v5",
-    month = "11",
-    year = "2021"
+    doi = "10.3847/1538-4357/ac74bb",
+    journal = "Astrophys. J.",
+    volume = "949",
+    number = "2",
+    pages = "76",
+    year = "2023"
 }
 
-@article{LIGOScientific:2021djp,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{GWTC-3: Compact Binary Coalescences Observed by LIGO and Virgo During the Second Part of the Third Observing Run}",
+@article{KAGRA:2021vkt,
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, VIRGO, LIGO Scientific",
+    title = "{GWTC-3: Compact Binary Coalescences Observed by LIGO and Virgo during the Second Part of the Third Observing Run}",
     eprint = "2111.03606",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2000318",
-    month = "11",
-    year = "2021"
+    doi = "10.1103/PhysRevX.13.041039",
+    journal = "Phys. Rev. X",
+    volume = "13",
+    number = "4",
+    pages = "041039",
+    year = "2023"
 }
 
 @article{LIGOScientific:2021iyk,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{Search for Gravitational Waves Associated with Gamma-Ray Bursts Detected by Fermi and Swift During the LIGO-Virgo Run O3b}",
+    title = "{Search for Gravitational Waves Associated with Gamma-Ray Bursts Detected by Fermi and Swift during the LIGO\textendash{}Virgo Run O3b}",
     eprint = "2111.03608",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "P2100091",
-    month = "11",
-    year = "2021"
+    doi = "10.3847/1538-4357/ac532b",
+    journal = "Astrophys. J.",
+    volume = "928",
+    number = "2",
+    pages = "186",
+    year = "2022"
 }
 
-@article{LIGOScientific:2021psn,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{The population of merging compact binaries inferred using gravitational waves through GWTC-3}",
+@article{KAGRA:2021duu,
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, VIRGO, LIGO Scientific",
+    title = "{Population of Merging Compact Binaries Inferred Using Gravitational Waves through GWTC-3}",
     eprint = "2111.03634",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "LIGO-P2100239 ; Data release: https://zenodo.org/record/5655785, LIGO-P2100239",
-    month = "11",
-    year = "2021"
+    doi = "10.1103/PhysRevX.13.011048",
+    journal = "Phys. Rev. X",
+    volume = "13",
+    number = "1",
+    pages = "011048",
+    year = "2023"
 }
 
 @article{LIGOScientific:2021hvc,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     collaboration = "LIGO Scientific, VIRGO, KAGRA",
     title = "{Searches for Gravitational Waves from Known Pulsars at Two Harmonics in the Second and Third LIGO-Virgo Observing Runs}",
     eprint = "2111.13106",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "LIGO-P2100049",
-    month = "11",
-    year = "2021"
+    doi = "10.3847/1538-4357/ac6acf",
+    journal = "Astrophys. J.",
+    volume = "935",
+    number = "1",
+    pages = "1",
+    year = "2022"
 }
 
 @article{LIGOScientific:2021inr,
     author = {{LIGO Scientific and Virgo Collaborations}},
     collaboration = "LIGO Scientific, VIRGO",
-    title = "{Search of the Early O3 LIGO Data for Continuous Gravitational Waves from the Cassiopeia A and Vela Jr. Supernova Remnants}",
+    title = "{Search of the early O3 LIGO data for continuous gravitational waves from the Cassiopeia A and Vela Jr. supernova remnants}",
     eprint = "2111.15116",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
-    reportNumber = "LIGO-P2100298-v7",
-    month = "11",
-    year = "2021"
+    reportNumber = "LIGO-P2100298-v8, LIGO-P2100298-v7",
+    doi = "10.1103/PhysRevD.105.082005",
+    journal = "Phys. Rev. D",
+    volume = "105",
+    number = "8",
+    pages = "082005",
+    year = "2022"
 }
 
 @article{LIGOScientific:2021rnv,
-    author = "Abbott, R. and others",
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     collaboration = "LIGO Scientific, Virgo, KAGRA",
     title = "{All-sky search for gravitational wave emission from scalar boson clouds around spinning black holes in LIGO O3 data}",
     eprint = "2111.15507",
@@ -580,7 +628,7 @@ x-ray pulsars in O3 LIGO data}",
 }
 
 @article{LIGOScientific:2021quq,
-    author = "Abbott, R. and others",
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     collaboration = "LIGO Scientific, KAGRA, VIRGO",
     title = "{Narrowband Searches for Continuous and Long-duration Transient Gravitational Waves from Known Pulsars in the LIGO-Virgo Third Observing Run}",
     eprint = "2112.10990",
@@ -595,55 +643,71 @@ x-ray pulsars in O3 LIGO data}",
     year = "2022"
 }
 
-@article{LIGOScientific:2022pjk,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+@article{KAGRA:2022dwb,
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, LIGO Scientific, VIRGO",
     title = "{All-sky search for continuous gravitational waves from isolated neutron stars using Advanced LIGO and Advanced Virgo O3 data}",
     eprint = "2201.00697",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2100367",
-    month = "1",
+    doi = "10.1103/PhysRevD.106.102008",
+    journal = "Phys. Rev. D",
+    volume = "106",
+    number = "10",
+    pages = "102008",
     year = "2022"
 }
 
-@article{LIGOScientific:2022cgf,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
+@article{KAGRA:2022dqk,
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, VIRGO, LIGO Scientific",
     title = "{Search for gravitational waves from Scorpius X-1 with a hidden Markov model in O3 LIGO data}",
     eprint = "2201.10104",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2100405",
-    month = "1",
+    doi = "10.1103/PhysRevD.106.062002",
+    journal = "Phys. Rev. D",
+    volume = "106",
+    number = "6",
+    pages = "062002",
     year = "2022"
 }
 
-@article{LIGOScientific:2022lsr,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{Search for continuous gravitational wave emission from the Milky Way center in O3 LIGO--Virgo data}",
+@article{KAGRA:2022osp,
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, LIGO Scientific, VIRGO",
+    title = "{Search for continuous gravitational wave emission from the Milky~Way center in O3 LIGO-Virgo data}",
     eprint = "2204.04523",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
-    month = "4",
+    doi = "10.1103/PhysRevD.106.042003",
+    journal = "Phys. Rev. D",
+    volume = "106",
+    number = "4",
+    pages = "042003",
     year = "2022"
 }
 
 @article{LIGOScientific:2022jpr,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    author =  {{LIGO Scientific, Virgo, KAGRA, and CHIME/FRB Collaborations}},
     collaboration = "LIGO Scientific, VIRGO, KAGRA, CHIME/FRB",
-    title = "{Search for Gravitational Waves Associated with Fast Radio Bursts Detected by CHIME/FRB During the LIGO--Virgo Observing Run O3a}",
+    title = "{Search for Gravitational Waves Associated with Fast Radio Bursts Detected by CHIME/FRB during the LIGO\textendash{}Virgo Observing Run O3a}",
     eprint = "2203.12038",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "P2100124",
-    month = "3",
-    year = "2022"
+    doi = "10.3847/1538-4357/acd770",
+    journal = "Astrophys. J.",
+    volume = "955",
+    number = "2",
+    pages = "155",
+    year = "2023"
 }
 
 @article{KAGRA:2022twx,
-    author = "Abbott, R. and others",
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     collaboration = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     title = "{First joint observation by the underground gravitational-wave detector KAGRA with GEO 600}",
     eprint = "2203.01270",
@@ -659,7 +723,7 @@ x-ray pulsars in O3 LIGO data}",
 }
 
 @article{Ferguson:2022qkz,
-    author = "Ferguson, Deborah",
+    author = "\mkbibbold{Ferguson}, \mkbibbold{Deborah}",
     title = "{Optimizing the placement of numerical relativity simulations using a mismatch predicting neural network}",
     eprint = "2209.15144",
     archivePrefix = "arXiv",
@@ -675,18 +739,22 @@ x-ray pulsars in O3 LIGO data}",
 
 @article{LIGOScientific:2022enz,
     author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{Model-based cross-correlation search for gravitational waves from the low-mass X-ray binary Scorpius X-1 in LIGO O3 data}",
+    collaboration = "LIGO Scientific, KAGRA, VIRGO",
+    title = "{Model-based Cross-correlation Search for Gravitational Waves from the Low-mass X-Ray Binary Scorpius X-1 in LIGO O3 Data}",
     eprint = "2209.02863",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
-    reportNumber = "LIGO-P2100110-v11",
-    month = "9",
+    reportNumber = "LIGO-P2100110-v11, FERMILAB-PUB-22-948-V, LIGO-P2100110-v13",
+    doi = "10.3847/2041-8213/aca1b0",
+    journal = "Astrophys. J. Lett.",
+    volume = "941",
+    number = "2",
+    pages = "L30",
     year = "2022"
 }
 
 @article{Ferguson:2023vta,
-    author = "Ferguson, Deborah and others",
+    author = "\mkbibbold{Ferguson}, \mkbibbold{Deborah} and others",
     title = "{Second MAYA Catalog of Binary Black Hole Numerical Relativity Waveforms}",
     eprint = "2309.00262",
     archivePrefix = "arXiv",
@@ -696,34 +764,42 @@ x-ray pulsars in O3 LIGO data}",
 }
 
 @article{Ferguson:2023mks,
-    author = "Ferguson, Deborah and others",
+    author = "\mkbibbold{Ferguson}, \mkbibbold{Deborah} and others",
     title = "{Mayawaves: Python Library for Interacting with the Einstein Toolkit and the MAYA Catalog}",
     eprint = "2309.00653",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.IM",
-    month = "9",
-    year = "2023"
+    doi = "10.21105/joss.06032",
+    journal = "J. Open Source Softw.",
+    volume = "9",
+    number = "98",
+    pages = "6032",
+    year = "2024"
 }
 
-@software{Ferguson_mayawaves_2023,
+@software{Ferguson_mayawaves_2024,
 author = {Ferguson, Deborah and Anne, Surendra and Gracia-Linares, Miguel and Iglesias, Hector and Jan, Aasim and Martinez, Erick and Lu, Lu and Meoni, Filippo and Nowicki, Ryan and Trostel, Max and Tsao, Bing-Jyun and Valorz, Finny},
-doi = {10.5281/zenodo.10035526},
-month = oct,
+doi = {10.5281/zenodo.8339252},
+month = jun,
 title = {{mayawaves}},
 url = {https://github.com/MayaWaves/mayawaves},
-version = {v2023.10},
-year = {2023}
+version = {v2024.6},
+year = {2024}
 }
 
-@article{FermiGamma-rayBurstMonitorTeam:2023gjw,
-    author = {{Fermi Gamma-ray Burst Monitor Team, LIGO Scientific, VIRGO, KAGRA Collaborations}},
-    collaboration = "Fermi Gamma-ray Burst Monitor Team, LIGO Scientific, VIRGO, KAGRA",
-    title = "{A Joint Fermi-GBM and Swift-BAT Analysis of Gravitational-Wave Candidates from the Third Gravitational-wave Observing Run}",
+@article{FermiGamma-RayBurstMonitorTeam:2023mtr,
+    author =  {{Fermi-Gamma-Ray Burst Monitor Team, LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "Fermi Gamma-Ray Burst Monitor Team, LIGO Scientific, Virgo, KAGRA",
+    title = "{A Joint Fermi-GBM and Swift-BAT Analysis of Gravitational-wave Candidates from the Third Gravitational-wave Observing Run}",
     eprint = "2308.13666",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
-    month = "8",
-    year = "2023"
+    doi = "10.3847/1538-4357/ad1eed",
+    journal = "Astrophys. J.",
+    volume = "964",
+    number = "2",
+    pages = "149",
+    year = "2024"
 }
 
 @article{LIGOScientific:2023lpe,
@@ -739,15 +815,19 @@ year = {2023}
 }
 
 @article{LIGOScientific:2023bwz,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{Search for gravitational-lensing signatures in the full third observing run of the LIGO-Virgo network}",
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, KAGRA, VIRGO",
+    title = "{Search for Gravitational-lensing Signatures in the Full Third Observing Run of the LIGO\textendash{}Virgo Network}",
     eprint = "2304.08393",
     archivePrefix = "arXiv",
     primaryClass = "gr-qc",
     reportNumber = "LIGO-P2200031",
-    month = "4",
-    year = "2023"
+    doi = "10.3847/1538-4357/ad3e83",
+    journal = "Astrophys. J.",
+    volume = "970",
+    number = "2",
+    pages = "191",
+    year = "2024"
 }
 
 @article{KAGRA:2023pio,
@@ -767,31 +847,39 @@ year = {2023}
 }
 
 @article{LIGOScientific:2022hai,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
     collaboration = "LIGO Scientific, VIRGO, KAGRA",
     title = "{Search for subsolar-mass black hole binaries in the second part of Advanced LIGO's and Advanced Virgo's third observing run}",
     eprint = "2212.01477",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
-    reportNumber = "https://dcc.ligo.org/P2200139",
-    month = "12",
-    year = "2022"
+    doi = "10.1093/mnras/stad588",
+    journal = "Mon. Not. Roy. Astron. Soc.",
+    volume = "524",
+    number = "4",
+    pages = "5984--5992",
+    year = "2023",
+    note = "[Erratum: Mon.Not.Roy.Astron.Soc. 526, 6234 (2023)]"
 }
 
 @article{LIGOScientific:2022sts,
-    author = {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
-    collaboration = "LIGO Scientific, VIRGO, KAGRA",
-    title = "{Search for gravitational-wave transients associated with magnetar bursts in Advanced LIGO and Advanced Virgo data from the third observing run}",
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, Virgo,, KAGRA, VIRGO",
+    title = "{Search for Gravitational-wave Transients Associated with Magnetar Bursts in Advanced LIGO and Advanced Virgo Data from the Third Observing Run}",
     eprint = "2210.10931",
     archivePrefix = "arXiv",
     primaryClass = "astro-ph.HE",
     reportNumber = "LIGO-P2100387",
-    month = "10",
-    year = "2022"
+    doi = "10.3847/1538-4357/ad27d3",
+    journal = "Astrophys. J.",
+    volume = "966",
+    number = "1",
+    pages = "137",
+    year = "2024"
 }
 
 @article{LISAConsortiumWaveformWorkingGroup:2023arg,
-    author = "Afshordi, Niaesh and others",
+    author = "LISA Consortium Waveform Working Group",
     collaboration = "LISA Consortium Waveform Working Group",
     title = "{Waveform Modelling for the Laser Interferometer Space Antenna}",
     eprint = "2311.01300",
@@ -799,4 +887,62 @@ year = {2023}
     primaryClass = "gr-qc",
     month = "11",
     year = "2023"
+}
+
+@article{Jan:2023raq,
+    author = "Jan, Aasim and \mkbibbold{Ferguson}, \mkbibbold{Deborah} and Lange, Jacob and Shoemaker, Deirdre and Zimmerman, Aaron",
+    title = "{Accuracy limitations of existing numerical relativity waveforms on the data analysis of current and future ground-based detectors}",
+    eprint = "2312.10241",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    doi = "10.1103/PhysRevD.110.024023",
+    journal = "Phys. Rev. D",
+    volume = "110",
+    number = "2",
+    pages = "024023",
+    year = "2024",
+    options = {maxnames=999}
+}
+
+@article{KAGRA:2024ipf,
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "KAGRA, LIGO Scientific, VIRGO",
+    title = "{Ultralight vector dark matter search using data from the KAGRA O3GK run}",
+    eprint = "2403.03004",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    reportNumber = "LIGO-P2300250",
+    doi = "10.1103/PhysRevD.110.042001",
+    journal = "Phys. Rev. D",
+    volume = "110",
+    number = "4",
+    pages = "042001",
+    year = "2024"
+}
+
+@article{LIGOScientific:2024elc,
+    author =  {{LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "LIGO Scientific, Virgo,, KAGRA, VIRGO",
+    title = "{Observation of Gravitational Waves from the Coalescence of a 2.5\textendash{}4.5 M $_{\odot}$ Compact Object and a Neutron Star}",
+    eprint = "2404.04248",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    reportNumber = "LIGO-P2300352",
+    doi = "10.3847/2041-8213/ad5beb",
+    journal = "Astrophys. J. Lett.",
+    volume = "970",
+    number = "2",
+    pages = "L34",
+    year = "2024"
+}
+
+@article{Swift-BATGUANO:2024vbh,
+    author =  {{Swift-BAT/GUANO, Swift, LIGO Scientific, Virgo, and KAGRA Collaborations}},
+    collaboration = "Swift-BAT/GUANO, Swift, LIGO Scientific, Virgo, KAGRA",
+    title = "{Swift-BAT GUANO follow-up of gravitational-wave triggers in the third LIGO-Virgo-KAGRA observing run}",
+    eprint = "2407.12867",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    month = "7",
+    year = "2024"
 }
