--- a/cv.tex
+++ b/cv.tex
@@ -26,8 +26,8 @@
   \vspace{8px}
   
   \textbf{Education:}\\
-  Ph.D., Physics, Georgia Institute of Techcnology, 2020\\
-  M.S., Physics, Georgia Institute of Techcnology, 2017\\
+  Ph.D., Physics, Georgia Institute of Technology, 2020\\
+  M.S., Physics, Georgia Institute of Technology, 2017\\
   B.S., Physics, University of Kentucky, 2016, \textit{summa cum laude} \\ Mathematics and Computer Science Minors\\
 
 \vspace{8px}
@@ -37,14 +37,14 @@
   
   \textit{Postdoctoral Fellow} \hfill \textit{2023-Present} \\
   University of Illinois Urbana-Champaign\\
-  Research focus: Numerical relativity with an eye toward next generation detectors\\
+  Research focus: Numerical relativity in General Relativity and beyond with an\\ eye toward next generation detectors\\
   Advisor: Helvi Witek\\
   
  \vspace{8px}  
  
   \textit{Postdoctoral Fellow} \hfill \textit{2021-2023} \\
   University of Texas at Austin\\
-  Research focus: Optimizing the use of numerical relativity with next generation\\ gravitational wave detectors\\
+  Research focus: Optimizing the use of numerical relativity for next generation\\ gravitational wave detectors\\
   Advisor: Deirdre Shoemaker\\
   
  \vspace{8px}  
@@ -90,16 +90,40 @@
 \vspace{8px}
 
   \textbf{Teaching:}\\
+  2024 - Guest Lecturer for Classical Mechanics I\\
+  2023 - Guest Lecturer for Introduction to General Relativity\\
+  2017-2023 - Vertically Integrated Projects Mentor\\
   Spring 2018 - Head TA for Introductory Physics I\\
   Fall 2017 - TA for Honors Introductory Physics II\\
   Summer 2017 - TA for Online Introductory Physics I\\
   Spring 2017 - TA for Introductory Physics II\\
-  Fall 2017 - TA for Introductory Physics I\\
+  Fall 2016 - TA for Introductory Physics I\\
+  
+  \vspace{8px}
+  
+  \textbf{Mentoring:}\\
+  Graduate Students Co-advised\\
+  Noora Ghadiri - expected graduation from UIUC 2027\\
+  Aasim Jan - expected graduation from UT Austin 2025\\
+  
+  \vspace{4px}
+   
+   Undergraduate Students Advised \\
+   Udit Ohri - current\\
+   Finny Valorz - graduated 2024 - now a graduate student at UT Austin\\   
+   Evelyn Allsup - graduated 2024\\
+   Ryan Nowicki - graduated 2023 - now a graduate student at Vanderbilt\\
+   Erick Martinez - graduated 2023 - now a graduate student at UT Austin\\
+   Lu Lu - graduated 2022\\
+   Surendra Anne - expected graduation 2025\\
+   Filippo Meoni - expected graduation 2025\\
+   Blake Steadham - expected garduation 2025\\
+    
  
   \vspace{8px}   
  
-  \textbf{Education and Public Outreach:}\\
-  2017-2023 - Vertically Integrated Projects Mentor\\
+  \textbf{Outreach:}\\
+  2024-Present - BRIDGE Speaker Program Co-Organizer\\ 
   2022 - Lakeway Breakfast Club Talk\\
   2021 - Generated visualizations for LVK announcement of Black-Hole Neutron-Star mergers\\
   2020 - Generated visualizations for LVK announcement of Intermediate Mass Black Hole merger\\
@@ -111,54 +135,74 @@
   \vspace{8px}
 
   \textbf{Leadership and Professional Service: }\\
+  2024-Present - Chair of Seminar Committee for APS Division of Gravitational Physics\\
+  2024-Present - Co-Chair of LISA Early Career Scientists\\
   2023-Present - Member-at-large on Executive Committee of APS Division of Gravitational Physics\\
   2020-2023 - LISA Working Group White Paper Coordinator for Accuracy and Numerical Relativity\\ \hspace{58px}Sections \\
-  2023 - Chair for Amaldi Conference on Gravitational Waves Session\\
-  2022 - Chair for APS April Meeting Session\\
+  %2023 - Chair for Amaldi Conference on Gravitational Waves Session\\
+  %2022 - Chair for APS April Meeting Session\\
   2021-2023 - Co-organizer of UT Austin Theory Group Seminar\\
   Referee for Physical Review Letters, Physical Review D,  and General Relativity and Gravitation\\
   Scribe for NASA Review Panel\\
   
+  \vspace{8px}  
+  
+  \textbf{Collaboration Membership: }\\
+  2020-Present - LISA Consortium\\
+  2016-Present - LIGO Scientific Collaboration\\
+  2016-Present - Einstein Toolkit\\
+  
   \vspace{8px}
   
   \textbf{Open-Source Software:}\\
-  \fullcite{Ferguson_mayawaves_2023}\\
+  \fullcite{Ferguson_mayawaves_2024}\\
   
+  \vspace{8px}
+
+  \textbf{Grants:}\\
+	XSEDE TG-PHY120016 - 300,200 SU on Stampede2 - coordinator\\
+	TACC Template-Placement - 20,160 SU on Stampede2 - PI\\
+	TACC NR-Catalog - 5,000 SU on Stampede2 - PI\\
+	
   \vspace{8px}
 
 \textbf{Invited Talks:}
   \begin{enumerate}
-  \item ``Numerical Relativity for High-Sensitivity Gravitational Wave Observation'', Seminar at the University of Illinois Urbana-Champaign, Urbana, IL, October 25, 2023
-  \item ``Numerical Relativity for High-Sensitivity Gravitational Wave Observation'', Seminar at Cornell, Ithaca, NY, October 18, 2023
-  \item ``Binary Black Hole Numerical Relativity Codes'', American Physical Society April Meeting, Minneapolis, Minnesota, April 2023
-  \item ``Optimizing the Placement of Numerical Relativity Simulations using a Mismatch Predicting Neural Network'',  Webinar for the Simulating eXtreme Spacetimes Collaboration,  November 21, 2022
-  \item ``Numerical Relativity with an Eye Toward Next Generation Gravitational Wave Detectors'', Seminar at the Albert Einstein Institute, Potsdam Germany, October 12, 2022 
-  \item ``Waveforms for Gravitational Wave Astronomy'', Lecture for Petnica Summer Institute, August 9, 2022
-  \item ``Gravitational Wave Data Analysis'', North American Einstein Toolkit Workshop, July 29, 2021
-  \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors'', Seminar at Gravity Group, University of Mississippi, Oxford, MS, March 18, 2021
-  \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors'', Seminar at Astrophysics/Gravity/Cosmology Group, University of Illinois Urbana-Champaign, Urbana, IL, November 11, 2020
+  \item ``Numerical Relativity Challenges,'' Plenary at 15th International LISA Symposium, Dublin, Ireland, July 10, 2024
+  \item ``Using Numerical Relativity Waveforms For Gravitational-Wave Observation,'' North American Einstein Toolkit Workshop, Louisiana State University, Baton Rouge, LA, June 3, 2024
+  \item ``Numerical Relativity for Next-Generation Gravitational-Wave Observation,'' Seminar at Vanderbilt University, Nashville, TN, March 1, 2024
+  \item ``Numerical Relativity for High-Sensitivity Gravitational Wave Observation,'' Seminar at the University of Illinois Urbana-Champaign, Urbana, IL, October 25, 2023
+  \item ``Numerical Relativity for High-Sensitivity Gravitational Wave Observation,'' Seminar at Cornell, Ithaca, NY, October 18, 2023
+  \item ``Binary Black Hole Numerical Relativity Codes,'' American Physical Society April Meeting, Minneapolis, Minnesota, April 2023
+  \item ``Optimizing the Placement of Numerical Relativity Simulations using a Mismatch Predicting Neural Network,''  Webinar for the Simulating eXtreme Spacetimes Collaboration,  November 21, 2022
+  \item ``Numerical Relativity with an Eye Toward Next Generation Gravitational Wave Detectors,'' Seminar at the Albert Einstein Institute, Potsdam Germany, October 12, 2022 
+  \item ``Waveforms for Gravitational Wave Astronomy,'' Lecture for Petnica Summer Institute, August 9, 2022
+  \item ``Gravitational Wave Data Analysis,'' North American Einstein Toolkit Workshop, July 29, 2021
+  \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors,'' Seminar at Gravity Group, University of Mississippi, Oxford, MS, March 18, 2021
+  \item ``Assessing the Preparedness of Numerical Relativity for Current and Future Gravitational Wave Detectors,'' Seminar at Astrophysics/Gravity/Cosmology Group, University of Illinois Urbana-Champaign, Urbana, IL, November 11, 2020
   \end{enumerate}
 
   \textbf{Contributed Talks:}
   \begin{enumerate}
-  \item D. Ferguson, ``Optimizing Numerical Relativity Placement using Neural Networks'', 14th International LISA Symposium, Virtual, July 2022
-  \item D. Ferguson, ``Predicting Match to Optimize Numerical Relativity Template Placement'', American Physical Society April Meeting, New York City NY, April 2022
-  \item D. Ferguson, D.Shoemaker, ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'', 14th Edoardo Amaldi Conference on Gravitational Waves, Virtual, July 2021
-  \item D. Ferguson,  D.Shoemaker, ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio'',  American Physical Society April Meeting, Virtual, April 2021
-  \item D. Ferguson, K. Jani, P. Laguna, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for LISA'', 13th International LISA Symposium, Virtual, September 2020
-  \item D. Ferguson, K. Jani, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', American Physical Society April Meeting, Virtual, April 2020
-  \item D. Ferguson, K. Jani, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections'', 235th Meeting of the American Astronomical Society, Honolulu HI, January 2020
-  \item D. Ferguson, ``Using Machine Learning to Optimize Placement of Numerical Relativity Simulations'', Machine Learning in Science and Engineering Conference, Atlanta GA, June 2019
-  \item D. Ferguson, K. Jani, D. Shoemaker, poster, ``Numerical Relativity Errors in LISA'', LISA Waveform Working Group Meeting, Golm Germany, May 2019
-  \item D. Ferguson, et al., ``Revealing the Final Black Hole from Signal at Maximum Amplitude'', American Physical Society April Meeting, Columbus OH, April 2018
-  \item D. Ferguson, et al., ``Apparent Horizon Dynamics of Binary Black Hole Systems'', Georgia Regional Astronomers Meeting, Athens GA, October 2017
-  \item D. Ferguson, C. Powell, ``A Mobile Physics Engine Modeling Two Dimensional Elastic and Inelastic Collisions for the Educational Demonstration of Physics Phenomena''. National Conference on Undergraduate Research, Lexington KY, April 2014
+  \item D. Ferguson, ``Optimizing Numerical Relativity Placement using Neural Networks,'' 14th International LISA Symposium, Virtual, July 2022
+  \item D. Ferguson, ``Predicting Match to Optimize Numerical Relativity Template Placement,'' American Physical Society April Meeting, New York City NY, April 2022
+  \item D. Ferguson, D.Shoemaker, ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio,'' 14th Edoardo Amaldi Conference on Gravitational Waves, Virtual, July 2021
+  \item D. Ferguson,  D.Shoemaker, ``Impact of Secondary Spin in Black Hole Binaries with Increasing Mass Ratio,''  American Physical Society April Meeting, Virtual, April 2021
+  \item D. Ferguson, K. Jani, P. Laguna, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for LISA,'' 13th International LISA Symposium, Virtual, September 2020
+  \item D. Ferguson, K. Jani, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections,'' American Physical Society April Meeting, Virtual, April 2020
+  \item D. Ferguson, K. Jani, D. Shoemaker, ``Assessing the Readiness of Numerical Relativity for Future Gravitational Wave Detections,'' 235th Meeting of the American Astronomical Society, Honolulu HI, January 2020
+  \item D. Ferguson, ``Using Machine Learning to Optimize Placement of Numerical Relativity Simulations,'' Machine Learning in Science and Engineering Conference, Atlanta GA, June 2019
+  \item D. Ferguson, K. Jani, D. Shoemaker, poster, ``Numerical Relativity Errors in LISA,'' LISA Waveform Working Group Meeting, Golm Germany, May 2019
+  \item D. Ferguson, et al., ``Revealing the Final Black Hole from Signal at Maximum Amplitude,'' American Physical Society April Meeting, Columbus OH, April 2018
+  \item D. Ferguson, et al., ``Apparent Horizon Dynamics of Binary Black Hole Systems,'' Georgia Regional Astronomers Meeting, Athens GA, October 2017
+  \item D. Ferguson, C. Powell, ``A Mobile Physics Engine Modeling Two Dimensional Elastic and Inelastic Collisions for the Educational Demonstration of Physics Phenomena,'' National Conference on Undergraduate Research, Lexington KY, April 2014
   \end{enumerate} 
 
-\newpage
+  \vspace{8px}
 
   \textbf{Short Author Publications:}
   \begin{enumerate}      
+    \item \fullcite{Jan:2023raq}
     \item \fullcite{Ferguson:2023vta}
     \item \fullcite{Ferguson:2023mks}
     \item \fullcite{Ferguson:2022qkz}
@@ -173,36 +217,42 @@
   \textbf{Collaboration Publications with Direct Involvement:}  
   \begin{enumerate}
   \setcounter{enumi}{\value{papers}}
-  \item \fullcite{LISAConsortiumWaveformWorkingGroup:2023arg}
-  \item \fullcite{LIGOScientific:2021sio}
-  \item \fullcite{LIGOScientific:2020tif}	
+  \item \fullcite{LISAConsortiumWaveformWorkingGroup:2023arg}\\
+  - Coordinator for Numerical Relativity and Accuracy Requirement sections
+  \item \fullcite{LIGOScientific:2021sio}\\
+  - Internal reviewer for ringdown analysis
+  \item \fullcite{LIGOScientific:2020tif}\\
+  - Internal reviewer for ringdown analysis
   \setcounter{papers}{\value{enumi}}
   \end{enumerate}
   
   \textbf{Collaboration Publications:}
   \begin{enumerate}
   \setcounter{enumi}{\value{papers}}
-  \item \fullcite{FermiGamma-rayBurstMonitorTeam:2023gjw}
+  \item \fullcite{Swift-BATGUANO:2024vbh}
+  \item \fullcite{LIGOScientific:2024elc}
+  \item \fullcite{KAGRA:2024ipf}
+  \item \fullcite{FermiGamma-RayBurstMonitorTeam:2023mtr}
   \item \fullcite{LIGOScientific:2023lpe}
   \item \fullcite{LIGOScientific:2023bwz}
   \item \fullcite{KAGRA:2023pio}
   \item \fullcite{LIGOScientific:2022hai}
   \item \fullcite{LIGOScientific:2022sts}
   \item \fullcite{LIGOScientific:2022enz}
-  \item \fullcite{LIGOScientific:2022lsr}
+  \item \fullcite{KAGRA:2022osp}
   \item \fullcite{LIGOScientific:2022jpr}
   \item \fullcite{KAGRA:2022twx}  
-  \item \fullcite{LIGOScientific:2022cgf}
-  \item \fullcite{LIGOScientific:2022pjk}
+  \item \fullcite{KAGRA:2022dqk}
+  \item \fullcite{KAGRA:2022dwb}
   \item \fullcite{LIGOScientific:2021quq}
   \item \fullcite{LIGOScientific:2021rnv}
   \item \fullcite{LIGOScientific:2021inr}
   \item \fullcite{LIGOScientific:2021hvc}
-  \item \fullcite{LIGOScientific:2021psn}
+  \item \fullcite{KAGRA:2021duu}
   \item \fullcite{LIGOScientific:2021iyk}
-  \item \fullcite{LIGOScientific:2021djp}
+  \item \fullcite{KAGRA:2021vkt}
   \item \fullcite{LIGOScientific:2021aug}
-  \item \fullcite{LIGOScientific:2021oez}
+  \item \fullcite{KAGRA:2021rmt}
   \item \fullcite{LIGOScientific:2021job}
   \item \fullcite{LIGOScientific:2021ozr}
   \item \fullcite{LIGOScientific:2021usb}
@@ -212,15 +262,15 @@
   \item \fullcite{LIGOScientific:2021qlt}
   \item \fullcite{LIGOScientific:2021ffg}
   \item \fullcite{LIGOScientific:2021mwx}
-  \item \fullcite{Abbott:2021iab}
+  \item \fullcite{LIGOScientific:2021izm}
   \item \fullcite{LIGOScientific:2021yby}
   \item \fullcite{KAGRA:2021mth}
   \item \fullcite{LIGOScientific:2021nrg}
   \item \fullcite{KAGRA:2021kbb}
-  \item \fullcite{Abbott:2020ilb}
+  \item \fullcite{LIGOScientific:2020lkw}
   \item \fullcite{Abbott:2020mev}
   \item \fullcite{LIGOScientific:2020lst}
-  \item \fullcite{Abbott:2020gyp}
+  \item \fullcite{LIGOScientific:2020kqk}
   \item \fullcite{LIGOScientific:2020ibl}  
   \item \fullcite{Abbott:2020mjq}
   \item \fullcite{Abbott:2020tfl}
@@ -229,6 +279,7 @@
   \item \fullcite{Abbott:2019ebz}
   \item \fullcite{Salemi:2019ovz}
   \end{enumerate}
-  
+
+
 \end{flushleft}
 \end{document}
